src/objects/LookupParent__c.object
<CustomObject>
    <fields>
        <fullName>Colours__c</fullName>
        <label>Colours</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Descriptions2__c</fullName>
        <label>Descriptions 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <label>Descriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total2__c</fullName>
        <label>Total 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Lookup Parent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lookup Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Parents</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Not_42</fullName>
        <active>true</active>
        <errorConditionFormula>Total__c !=42</errorConditionFormula>
        <errorDisplayField>Total__c</errorDisplayField>
        <errorMessage>The answer is not 42!</errorMessage>
    </validationRules>
</CustomObject>